crates/svfmt_sv_formatter/tests/snapshots/fixture_snapshots__formatted@02_minimal_module.snap
---
source: crates/svfmt_sv_formatter/tests/fixture_snapshots.rs
expression: formatted
input_file: tests/fixtures/02_minimal_module/input.sv
---
module foo; endmodule
