crates/svfmt_sv_formatter/tests/snapshots/fixture_snapshots__formatted@03_ansi_ports_short.snap
---
source: crates/svfmt_sv_formatter/tests/fixture_snapshots.rs
assertion_line: 48
expression: formatted
input_file: tests/fixtures/03_ansi_ports_short/input.sv
---
module a (
  input  wire clk,
  input  wire rst_n,
  output wire ready
);
endmodule
