crates/svfmt_sv_formatter/tests/snapshots/fixture_snapshots__formatted@07_long_ternary.snap
---
source: crates/svfmt_sv_formatter/tests/fixture_snapshots.rs
assertion_line: 48
expression: formatted
input_file: tests/fixtures/07_long_ternary/input.sv
---
module a (
  input  wire  [31:0] x,
  output logic [31:0] y
);
  assign y = (x == 32'h0) ? 32'hDEAD_BEEF : (x[0]) ? {x[30:0], 1'b1} : {x[30:0], 1'b0};
endmodule
