crates/svfmt_sv_formatter/tests/snapshots/fixture_snapshots__formatted@08_parameters.snap
---
source: crates/svfmt_sv_formatter/tests/fixture_snapshots.rs
assertion_line: 48
expression: formatted
input_file: tests/fixtures/08_parameters/input.sv
---
module a #(parameter int WIDTH = 8, parameter int DEPTH = 16) (
  input  wire              clk,
  output logic [WIDTH-1:0] q
);
  localparam int MAX = WIDTH * DEPTH;
  always_ff @(posedge clk) q <= q + 1;
endmodule
