crates/svfmt_sv_formatter/tests/snapshots/fixture_snapshots__formatted@10_tabs_config.snap
---
source: crates/svfmt_sv_formatter/tests/fixture_snapshots.rs
assertion_line: 48
expression: formatted
input_file: tests/fixtures/10_tabs_config/input.sv
---
module a (
	input  wire  clk,
	output logic q
);
	always_ff @(posedge clk) begin
		q <= ~q;
	end
endmodule
